@@ -1,0 +1,86 @@
+nr_free_pages 130840
+nr_inactive_anon 294045
+nr_active_anon 3147436
+nr_inactive_file 4621304
+nr_active_file 758721
+nr_unevictable 0
+nr_mlock 0
+nr_anon_pages 22571
+nr_mapped 3081
+nr_file_pages 5380166
+nr_dirty 29
+nr_writeback 0
+nr_slab_reclaimable 44001
+nr_slab_unreclaimable 170481
+nr_page_table_pages 11151
+nr_kernel_stack 345
+nr_unstable 0
+nr_bounce 0
+nr_vmscan_write 1274
+nr_writeback_temp 0
+nr_isolated_anon 0
+nr_isolated_file 0
+nr_shmem 76
+numa_hit 283582756
+numa_miss 31703965
+numa_foreign 31703965
+numa_interleave 38201
+numa_local 283559638
+numa_other 31727083
+nr_anon_transparent_hugepages 6677
+pgpgin 344603708
+pgpgout 76233236
+pswpin 32
+pswpout 1274
+pgalloc_dma 0
+pgalloc_dma32 11642352
+pgalloc_normal 313550150
+pgalloc_movable 0
+pgfree 325583764
+pgactivate 1002412
+pgdeactivate 496466
+pgfault 265210810
+pgmajfault 3892
+pgrefill_dma 0
+pgrefill_dma32 1761
+pgrefill_normal 112988
+pgrefill_movable 0
+pgsteal_dma 0
+pgsteal_dma32 7072219
+pgsteal_normal 105946028
+pgsteal_movable 0
+pgscan_kswapd_dma 0
+pgscan_kswapd_dma32 6833440
+pgscan_kswapd_normal 104536352
+pgscan_kswapd_movable 0
+pgscan_direct_dma 0
+pgscan_direct_dma32 238907
+pgscan_direct_normal 1413746
+pgscan_direct_movable 0
+zone_reclaim_failed 0
+pginodesteal 0
+slabs_scanned 722176
+kswapd_steal 111365615
+kswapd_inodesteal 1537580
+kswapd_low_wmark_hit_quickly 8648
+kswapd_high_wmark_hit_quickly 46184
+kswapd_skip_congestion_wait 0
+pageoutrun 219715
+allocstall 91
+pgrotated 1274
+compact_blocks_moved 6517
+compact_pages_moved 195206
+compact_pagemigrate_failed 0
+compact_stall 244
+compact_fail 34
+compact_success 210
+htlb_buddy_alloc_success 0
+htlb_buddy_alloc_fail 0
+unevictable_pgs_culled 5053
+unevictable_pgs_scanned 0
+unevictable_pgs_rescued 4440
+unevictable_pgs_mlocked 6098
+unevictable_pgs_munlocked 6098
+unevictable_pgs_cleared 0
+unevictable_pgs_stranded 0
+unevictable_pgs_mlockfreed 0
